--- a/demos/customCourseWare/package.json
+++ b/demos/customCourseWare/package.json
@@ -12,12 +12,12 @@
     "vue": "~3.5"
   },
   "devDependencies": {
-    "vue-style-loader": "^4.1.3",
-    "css-loader": "^6.7.4",
     "@rspack/cli": "^1.0.14",
     "@rspack/core": "^1.0.14",
+    "css-loader": "^6.7.4",
     "less": "4.1.3",
     "less-loader": "^11.1.4",
-    "vue-loader": "^17.2.2"
+    "vue-loader": "^17.2.2",
+    "vue-style-loader": "^4.1.3"
   }
 }
